--- a/main.css
+++ b/main.css
@@ -195,7 +195,7 @@ img {
 
     background-color: var(--default-color);
     margin-top: 30px;
-    width: 100%;
+    width: 375px;
     z-index: 10;
 }
 
@@ -325,3 +325,4 @@ img {
 .movie_nav_option {
     cursor: pointer;
 }
+
