--- a/main.css
+++ b/main.css
@@ -4,11 +4,6 @@
 
 
 
-
-
-
-
-
 :root {
     --default-color: #242A32
 }
@@ -19,46 +14,33 @@
 }
 
 body {
-
     font-family: 'Poppins';
     background-color: var(--default-color);
-
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-
 }
 
 
 #app {
     max-width: 375px;
-    min-height: 100vh;
+    min-height: max-content;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     flex-direction: column;
-
     margin-top: 10px;
 }
 
 
-
-
-
-
-
 #app-detail {
-
     max-width: 375px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-
     padding: 10px;
-
 }
 
 
@@ -73,7 +55,6 @@ img {
 
 .search-bar {
     position: relative;
-
 }
 
 .search-bar input {
@@ -91,16 +72,12 @@ img {
 .search-bar input::placeholder {
     font-family: 'Poppins';
     color: #67686D;
-
-
 }
 
 .search-bar i {
     position: absolute;
     right: 10px;
     bottom: 13px;
-
-
 }
 
 /* TOP RATED */
@@ -112,11 +89,8 @@ img {
     min-height: 250px;
     overflow-x: scroll;
     overflow-y: hidden;
-
     display: flex;
     justify-content: flex-start;
-
-
 }
 
 .top-rated-movie {
@@ -136,7 +110,6 @@ img {
     top: 75px;
     left: 0px;
     font-size: 96px;
-
 }
 
 /* MENU */
@@ -172,7 +145,6 @@ img {
 
 .menu-bar li.active {
     border-bottom: 4px solid #3a3f47;
-
 }
 
 
@@ -183,16 +155,12 @@ img {
 .menu-movies {
     width: 100%;
     height: 300px;
-
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
     margin: 0;
-
     overflow-y: scroll;
-
-
 }
 
 .menu-movies::-webkit-scrollbar {
@@ -200,10 +168,8 @@ img {
 }
 
 .menu-movies_item {
-
     border-radius: 15px;
     width: 26%;
-
 }
 
 
@@ -216,7 +182,6 @@ img {
     display: flex;
     justify-content: space-around;
     align-items: center;
-
     background-color: var(--default-color);
     margin-top: 30px;
     width: 100%;
@@ -225,13 +190,11 @@ img {
 
 
 .nav-icon {
-
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     color: #67686D;
-
 }
 
 .nav-icon .fa.selected {
@@ -250,12 +213,7 @@ img {
 
 
 
-
-
 /* MOVIE SECTION */
-
-
-
 
 
 
@@ -286,15 +244,11 @@ img {
     display: flex;
     align-items: flex-end;
     justify-content: space-around;
-
     font-size: 18px;
     font-weight: 600;
     line-height: 27px;
-
     margin-top: -60px;
-
     z-index: 10;
-
 }
 
 .movie_title p {
@@ -313,7 +267,6 @@ img {
     display: flex;
     justify-content: space-around;
     align-items: center;
-
 }
 
 
@@ -327,7 +280,6 @@ img {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
 }
 
 .movie_nav ul {
@@ -369,12 +321,10 @@ img {
 
 #watch-list_app {
     width: 375px;
-
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
-
     padding: 10px;
     margin-top: 10px;
 }
@@ -386,11 +336,10 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
-
     margin-bottom: 44px;
 }
 
-.watch-list_nav a  {
+.watch-list_nav a {
     color: #ECECEC;
     width: 70%;
 }
@@ -406,108 +355,87 @@ img {
 .saved-movies {
     height: 100%;
     width: 100%;
-    
     display: flex;
     align-items: center;
     flex-direction: column;
-    
-    }
-    
-    
-    .saved-movies_info{
+}
+
+
+.saved-movies_info {
     color: white;
     font-size: 12px;
-    
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: 70%;
     margin-left: 10px;
-    
-    }
-    
-    .saved-movies_info p {
-        margin: 0;
-    }
 
-    
-    .saved_item {
-        display: flex;
-        justify-content: flex-start;
-        width: 100%;
-    
-        margin-bottom: 24px;
-    }
-    
-    .info {
-        display: flex;
-    }
-    
-    .info p {
-        margin-left: 4px;
-    }
-    
+}
+
+.saved-movies_info p {
+    margin: 0;
+}
+
+
+.saved_item {
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+    margin-bottom: 24px;
+}
+
+.info {
+    display: flex;
+}
+
+.info p {
+    margin-left: 4px;
+}
+
 
 .hidden {
     display: none;
 }
 
 
-
+/* @MEDIA  */
 
 @media only screen and (max-width: 374px) {
     #app {
-
-      margin-top: 5px;
-      width: 100vw;
-      min-height: max-content;
-    }
-
-    #app-detail {
-
         width: 100vw;
         min-height: max-content;
-
-    
     }
-
+    #app-detail {
+        width: 100vw;
+        min-height: max-content;
+    }
+    .search-bar input {
+        min-width: 300px;
+    }
+    .top-rated {
+        flex-direction: column;
+        max-height: 250px;
+        overflow-x: hidden;
+        overflow-y: scroll;
+    }
+    .movie-number {
+        z-index: 10;
+    }
+    .menu-movies {
+        flex-wrap: nowrap;
+        flex-direction: column;
+    }
 }
 
-
+@media only screen and (max-width:340px) {
+    .search-bar input {
+        min-width: 100px;
+    }
+}
 
 @media only screen and (min-height:668) {
     #app-detail {
-
         width: 100vw;
         min-height: max-content;
-
-    
     }
-
-
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
